--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "pydantic>=2.12.5",
     "typer>=0.21.0",
     "jinja2>=3.1.6",
+    "packaging>=25.0",
 ]
 
 [dependency-groups]
