--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,7 @@ repos:
   - id: end-of-file-fixer
   - id: check-yaml
   - id: check-added-large-files
+    exclude: ^(docs/|examples/)  # Allow large files in docs and examples
 - repo: https://github.com/astral-sh/uv-pre-commit
   rev: 0.7.2
   hooks:
